changed the directory structure

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "breakout",
   "version": "1.0.0",
   "description": "",
-  "main": "ball.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/cr646531/breakout#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.1"
   }
 }
