--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "breakout",
+  "name": "javascript-breaker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "build": "webpack",
+    "start": "npm run build & node index.js",
+    "start:dev": "npm run build & nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cr646531/breakout.git"
+    "url": "git+https://github.com/cr646531/javascript-breaker.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cr646531/breakout/issues"
+    "url": "https://github.com/cr646531/javascript-breaker/issues"
   },
-  "homepage": "https://github.com/cr646531/breakout#readme",
+  "homepage": "https://github.com/cr646531/javascript-breaker#readme",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.1",
