modified package.json file to fix deployment issues

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "javascript-breaker",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "build": "webpack",
     "start": "npm run build & node index.js",
