added engines section to package.json file to attempt to fix deployment issues

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "javascript-breaker",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.1"
+  },
   "scripts": {
     "build": "webpack",
     "start": "npm run build & node index.js",
